methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:2: error: not found: type RED
  motif1(c:RED)
           ^PatternPicture:2: error: not found: value c
  motif1(c:RED)
         ^