methods.picture.PatternPicture.scala.code
override def run() {
  motif1(c:RED)
  
}









def motif1(c:Color){
  setCouleurBrosse(c)
  avance()
  marquerSol()
  gauche()
  avance()
  gauche()
  marquerSol()
  gauche()
  avance()
  gauche()
}

//marque le sol
def marquerSol(){
  baisseBrosse()
  leveBrosse()
}